<resources>
    <string name="app_name">GlumacActivity</string>

    <string name="descriptionIme">Film Name:</string>


    <string name="descriptionGodina">Year:</string>


    <string name="cancel">CANCEL</string>

    <string name="save">SAVE</string>
    <string name="delete">Delete</string>
    <string name="add_film">Add film</string>
    <string name="edit">Edit</string>
    <string name="action_add">G</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="nameSurename">Name and Surename:</string>
    <string name="biography">Biography:</string>
    <string name="stars">Stars:</string>
    <string name="born">Year of birth:</string>



</resources>
